--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,18 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "drawer"]
+	path = drawer
+	url = https://github.com/lz100/drawer
+	shallow = true
+	registered = true
+[submodule "spsComps"]
+	path = spsComps
+	url = https://github.com/lz100/spscomps
+	shallow = true
+	registered = true
+[submodule "spsUtil"]
+	path = spsUtil
+	url = https://github.com/lz100/spsutil
+	shallow = true
+	registered = true
